platform-services/ai-gateway/tests/snapshots/integration__chat__no-provider-for-model.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  status: 400
  body:
    error:
      message: no provider configured for model some-unconfigured-model
      type: ai_gateway_error
upstream_requests: []
